fix: [NO-TASK] bottom sheet scroll on ios

--- a/packages/ui/src/BottomSheet/BottomSheet.module.scss
+++ b/packages/ui/src/BottomSheet/BottomSheet.module.scss
@@ -59,6 +59,7 @@
   overflow: auto;
   min-height: 100%;
   height: auto;
+  max-height: 90vh;
   -webkit-overflow-scrolling: touch;
 }
 
